--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: tomwell-eureka-server
+    name: eureka-server
   cloud:
     config:
-      uri: http://localhost:8091
+      uri: http://localhost:8090
