--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -3,4 +3,4 @@ spring:
     name: eureka-server
   cloud:
     config:
-      uri: http://localhost:8090
+      uri: https://tw-config-server.herokuapp.com/
